--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@web3modal/react": "^2.7.1",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
+    "ethers": "^5.7.2",
     "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
